@@ -55,7 +55,7 @@ class LanguagesViewLanguage extends JView
 		JRequest::setVar('hidemainmenu', 1);
 		$isNew = empty($this->item->lang_id);
 
-		JToolBarHelper::title(JText::_($isNew ? 'COM_LANGS_VIEW_LANGUAGE_EDIT_NEW_TITLE' : 'COM_LANGS_VIEW_LANGUAGE_EDIT_EDIT_TITLE'));
+		JToolBarHelper::title(JText::_($isNew ? 'COM_LANGUAGES_VIEW_LANGUAGE_EDIT_NEW_TITLE' : 'COM_LANGUAGES_VIEW_LANGUAGE_EDIT_EDIT_TITLE'));
 		JToolBarHelper::save('language.save','JTOOLBAR_SAVE');
 		JToolBarHelper::apply('language.apply','JTOOLBAR_APPLY');
 		JToolBarHelper::addNew('language.save2new', 'JToolbar_Save_and_new');
