@@ -7,47 +7,59 @@
 COM_LANGUAGES="Language Manager"
 COM_LANGUAGES_XML_DESCRIPTION="Component for language managment"
 
-COM_LANGS_SUBMENU_CONTENT="Content"
-COM_LANGS_SUBMENU_INSTALLED="Installed"
+COM_LANGUAGES_SUBMENU_CONTENT="Content"
+COM_LANGUAGES_SUBMENU_INSTALLED="Installed"
 
-COM_LANGS_VIEW_INSTALLED_TITLE="Language Manager: Installed Languages"
+COM_LANGUAGES_VIEW_INSTALLED_TITLE="Language Manager: Installed Languages"
 
-COM_LANGS_FILTER_CLIENT_LABEL="Filter Type:"
+COM_LANGUAGES_FILTER_CLIENT_LABEL="Filter Type:"
 
-COM_LANGS_HEADING_AUTHOR_EMAIL="Author Email"
-COM_LANGS_HEADING_DEFAULT="Default"
-COM_LANGS_HEADING_LANGUAGE="Language"
-COM_LANGS_HEADING_NUM="Num"
-COM_LANGS_PASSWORD="Password"
-COM_LANGS_USERNAME="Username"
-COM_LANGS_ERR_NO_LANGUAGE_SELECTED="No Language Selected"
-COM_LANGS_MSG_DEFAULT_LANGUAGE_SAVED="Default Language Saved"
-COM_LANGS_FTP_DESC="For setting Languages as default, Joomla! will most likely need your FTP account details. Please enter them in the form fields below."
-COM_LANGS_FTP_TITLE="FTP Login Details"
+COM_LANGUAGES_HEADING_AUTHOR_EMAIL="Author Email"
+COM_LANGUAGES_HEADING_DEFAULT="Default"
+COM_LANGUAGES_HEADING_LANGUAGE="Language"
+COM_LANGUAGES_HEADING_NUM="Num"
+COM_LANGUAGES_PASSWORD="Password"
+COM_LANGUAGES_USERNAME="Username"
+COM_LANGUAGES_ERR_NO_LANGUAGE_SELECTED="No Language Selected"
+COM_LANGUAGES_MSG_DEFAULT_LANGUAGE_SAVED="Default Language Saved"
+COM_LANGUAGES_FTP_DESC="For setting Languages as default, Joomla! will most likely need your FTP account details. Please enter them in the form fields below."
+COM_LANGUAGES_FTP_TITLE="FTP Login Details"
 
 ; Language Content View
-COM_LANGS_VIEW_LANGUAGES_TITLE="Language Manager: Content Languages"
-COM_LANGS_VIEW_LANGUAGE_EDIT_NEW_TITLE="Language Manager: New Content Language"
-COM_LANGS_VIEW_LANGUAGE_EDIT_EDIT_TITLE="Language Manager: Edit Content Language"
-COM_LANGS_HEADING_TITLE="Title"
-COM_LANGS_HEADING_LANG_CODE="Language Code"
-COM_LANGS_HEADING_TITLE_NATIVE="Native Title"
+COM_LANGUAGES_VIEW_LANGUAGES_TITLE="Language Manager: Content Languages"
+COM_LANGUAGES_VIEW_LANGUAGE_EDIT_NEW_TITLE="Language Manager: New Content Language"
+COM_LANGUAGES_VIEW_LANGUAGE_EDIT_EDIT_TITLE="Language Manager: Edit Content Language"
+COM_LANGUAGES_HEADING_TITLE="Title"
+COM_LANGUAGES_HEADING_LANG_CODE="Language Code"
+COM_LANGUAGES_HEADING_TITLE_NATIVE="Native Title"
 
-COM_LANGS_SEARCH_IN_TITLE="Search in title"
+COM_LANGUAGES_SEARCH_IN_TITLE="Search in title"
 
-COM_LANGS_FIELD_DESCRIPTION_DESC="Enter here a description for the language"
-COM_LANGS_FIELD_DESCRIPTION_LABEL="Description"
-COM_LANGS_FIELD_LANG_CODE_DESC="Enter here the language tag – example: en-GB for English (UK). This should be the exact prefix used for the language installed or to be installed."
-COM_LANGS_FIELD_LANG_CODE_LABEL="Code"
-COM_LANGS_FIELD_PUBLISHED_DESC="Whether this content language is published or not"
-COM_LANGS_FIELD_TITLE_DESC="The name of the language as it will appear in the lists"
-COM_LANGS_FIELD_TITLE_LABEL="Title"
-COM_LANGS_FIELD_TITLE_NATIVE_DESC="Title in Native language"
-COM_LANGS_FIELD_TITLE_NATIVE_LABEL="Title Native"
-COM_LANGS_FIELD_ALIAS_LABEL="Alias"
-COM_LANGS_FIELD_ALIAS_DESC="COM_LANGS_FIELD_ALIAS_DESC do we need this field?"
+COM_LANGUAGES_FIELD_DESCRIPTION_DESC="Enter here a description for the language"
+COM_LANGUAGES_FIELD_DESCRIPTION_LABEL="Description"
+COM_LANGUAGES_FIELD_LANG_CODE_DESC="Enter here the language tag – example: en-GB for English (UK). This should be the exact prefix used for the language installed or to be installed."
+COM_LANGUAGES_FIELD_LANG_CODE_LABEL="Code"
+COM_LANGUAGES_FIELD_PUBLISHED_DESC="Whether this content language is published or not"
+COM_LANGUAGES_FIELD_TITLE_DESC="The name of the language as it will appear in the lists"
+COM_LANGUAGES_FIELD_TITLE_LABEL="Title"
+COM_LANGUAGES_FIELD_TITLE_NATIVE_DESC="Title in Native language"
+COM_LANGUAGES_FIELD_TITLE_NATIVE_LABEL="Title Native"
+COM_LANGUAGES_FIELD_ALIAS_LABEL="Alias"
+COM_LANGUAGES_FIELD_ALIAS_DESC="COM_LANGUAGES_FIELD_ALIAS_DESC do we need this field?"
 
 COM_LANGUAGES_CONFIGURATION="Language Manager Options"
-COM_LANGS_ERR_DELETE="Select a language to delete"
-COM_LANGS_ERR_PUBLISH="Select a language to publish"
-COM_LANGS_ERROR_NO_TITLE="The language should have a title"
+COM_LANGUAGES_ERR_DELETE="Select a language to delete"
+COM_LANGUAGES_ERR_PUBLISH="Select a language to publish"
+COM_LANGUAGES_ERROR_NO_TITLE="The language should have a title"
+
+COM_LANGUAGES_NO_LANGUAGES_SELECTED="No languages selected"
+COM_LANGUAGES_N_ITEMS_DELETED="%d languages successfully deleted"
+COM_LANGUAGES_N_ITEMS_DELETED_1="%d language successfully deleted"
+COM_LANGUAGES_N_ITEMS_PUBLISHED="%d languages successfully published"
+COM_LANGUAGES_N_ITEMS_PUBLISHED_1="%d language successfully published"
+COM_LANGUAGES_N_ITEMS_UNPUBLISHED="%d languages successfully unpublished"
+COM_LANGUAGES_N_ITEMS_UNPUBLISHED_1="%d language successfully unpublished"
+COM_LANGUAGES_N_ITEMS_ARCHIVED="%d languages successfully archived"
+COM_LANGUAGES_N_ITEMS_ARCHIVED_1="%d language successfully archived"
+COM_LANGUAGES_N_ITEMS_TRASHED="%d languages successfully trashed"
+COM_LANGUAGES_N_ITEMS_TRASHED_1="%d language successfully trashed"
