@@ -30,6 +30,8 @@ $ -> Language fix or change
 23-Apr-2010 Jean-Marie Simonet
 # Bug fix + new string
 $ Refactoring ini/keys in libraries/J/Installer/
+# Bug fix in com_languages (Thank you Dennis)
+$ Refactored com_languages keys + added strings
 
 23-Apr-2010 Christophe Demko
 ^ renaming some functions in JLanguage and JText relative to 'plural' and 'ignored search words' function
